[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scences/Strip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/RoadStrips.gd" type="Script" id=2]

[node name="RoadStrips" type="Node2D"]
script = ExtResource( 2 )

[node name="Strip" parent="." instance=ExtResource( 1 )]

[node name="Strip2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 200 )

[node name="Strip3" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 400 )

[node name="Strip4" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 600 )

[node name="Strip5" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 800 )

[node name="Strip6" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 1000 )
